# ProjectJsonToBat

./: CMakeLists.txt  Doxyfile  MinGW.bat  README.md  VSCodeMinGW.bat  run.bat
html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  main_8cpp_source.html  namespaceWIP.html  namespaceWIP_a11d0d8373a8a6c4eebcc8b0d2dcccac9_icgraph.map  namespaceWIP_a11d0d8373a8a6c4eebcc8b0d2dcccac9_icgraph.md5  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  nurTest_8cpp.html  nurTest_8cpp.js  nurTest_8cpp__incl.map  nurTest_8cpp__incl.md5  nurTest_8cpp_source.html  pages.html  todo.html
include/: LoggingWrapper.hpp
latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  files.tex  index.tex  main_8cpp.tex  main_8cpp__incl.md5  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  main_8cpp_source.tex  namespaceWIP.tex  namespaceWIP_a11d0d8373a8a6c4eebcc8b0d2dcccac9_icgraph.md5  namespaces.tex  nurTest_8cpp.tex  refman.aux  (+9 more)
lib/: CMakeLists.txt  LoggingWrapper.cpp
(+83 files in other folders)
